--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
   provider: ^6.1.4
   google_fonts: ^6.2.1
   flutter_svg: ^2.1.0
+  ff_bloc: ^1.0.3
+  equatable: ^2.0.7
 
 dev_dependencies:
   flutter_test:
@@ -24,3 +26,4 @@ flutter:
   assets: 
     - assets/icons/
     - assets/jobby/
+    - assets/weather/
